--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,17 +19,14 @@ jobs:
     - name: Build
       run: hugo --minify
     - name: Rsync to Uberspace
+      id: deploy
       uses: Pendect/action-rsyncer@v1.1.0
       env:
         DEPLOY_KEY: ${{secrets.DEPLOY_KEY}}
       with:
-        # Rsync flags
-        #flags: # default is -avzr --delete
-        # Rsync options (exclusion)
-        #options: # default is 
-        # SSH command line options
-        #ssh_options: # default is 
-        # Local folder to be synced
+        flags: '-avzr --delete'
         src: "public/"
-        # Remote server and path. i.e user@server.com:/var/www/server.com/
         dest: flxptrs@machholz.uberspace.de:/var/www/virtual/flxptrs/html
+        
+    - name: Display status from deploy
+      run: echo "${{ steps.deploy.outputs.status }}"
