--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,12 @@ jobs:
       uses: peaceiris/actions-hugo@v2.4.4
     - name: Build
       run: hugo --minify
-    - name: debug
-      run: echo ${{secrets.FOO}}
+      
     - name: Rsync to Uberspace
       id: deploy
       uses: Pendect/action-rsyncer@v1.1.0
       env:
-        DEPLOY_KEY: ${{secrets.DEPLOY_KEY}}
+        DEPLOY_KEY: ${{secrets.DEPLOY_KEY_UBERSPACE}}
       with:
         flags: '-avzr --delete'
         src: "public/"
