--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,22 +12,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
+      
     - name: Hugo setup
       uses: peaceiris/actions-hugo@v2.4.4
+      
     - name: Build
       run: hugo --minify
       
-    - name: Rsync to Uberspace
-      id: deploy
-      uses: Pendect/action-rsyncer@v1.1.0
+    - name: Setup SSH agent
       env:
-        DEPLOY_KEY: ${{secrets.DEPLOY_KEY_UBERSPACE}}
-      with:
-        flags: '-avzr --delete'
-        src: "public/"
-        dest: flxptrs@machholz.uberspace.de:/var/www/virtual/flxptrs/html
-        
-    - name: Display status from deploy
-      run: echo "${{ steps.deploy.outputs.status }}"
+        DEPLOY_KEY: ${{ secrets.DEPLOY_KEY_UBERSPACE }}
+      run: |
+        eval "$(ssh-agent -s)"
+        ssh-add - <<< "${DEPLOY_KEY}"
+        ssh flxptrs@machholz.uberspace.de -o 'StrictHostKeychecking no' -c 'pwd; whoami'
