--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
       run: |
         eval "$(ssh-agent -s)"
         ssh-add - <<< "${DEPLOY_KEY}"
-        ssh flxptrs@machholz.uberspace.de -o 'StrictHostKeychecking no' -c 'pwd; whoami'
+        ssh flxptrs@machholz.uberspace.de -o 'StrictHostKeychecking no' -C 'pwd; whoami'
