--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,6 @@ jobs:
       run: |
         eval "$(ssh-agent -s)"
         ssh-add - <<< "${DEPLOY_KEY}"
-        ssh flxptrs@machholz.uberspace.de -o 'StrictHostKeychecking no'
-    
-    - name: Deploy
-      run: rsync -e "ssh -o 'StrictHostKeychecking no'" -azv public/ flxptrs@machholz.uberspace.de:/var/www/virtual/flxptrs/html
+        rsync -e "ssh -o 'StrictHostKeychecking no'" -azv public/ flxptrs@machholz.uberspace.de:/var/www/virtual/flxptrs/html
       
       
